Refactor constant values and improve code readability
Consolidate and refactor constant values for better maintainability and readability. This includes color definitions, random number bounds, button configurations, and layout parameters into named constants. It also improves code consistency and reusability.