@@ -14,6 +14,21 @@ public class SortApp extends JFrame {
     private static final Dimension LARGE_SIZE = new Dimension(800, 600);
     private static final int MAX_NUMBERS = 1000;
     private static final int NUMBER_LIMIT = 30;
+    private static final int RANDOM_LOWER_BOUND = 1;
+    private static final int RANDOM_UPPER_BOUND = 1001;
+    private static final int SORT_SLEEP_DURATION_MS = 100;
+
+    private static final int NUM_ROWS = 10;
+    private static final int NUM_COLUMNS_PER_ROW = 10;
+    private static final int GRID_HORIZONTAL_GAP = 5;
+    private static final int GRID_VERTICAL_GAP = 5;
+
+    private static final Color BUTTON_ENTER_COLOR = new Color(173, 216, 230);
+    private static final Color BUTTON_SORT_COLOR = new Color(0, 128, 0);
+    private static final Color NUMBER_BUTTON_BACKGROUND_COLOR = Color.BLUE;
+    private static final Color NUMBER_BUTTON_TEXT_COLOR = Color.WHITE;
+
+    private final Random random = new Random();
 
     private JTextField inputField;
     private JButton enterButton, sortButton, resetButton;
@@ -44,7 +59,7 @@ public class SortApp extends JFrame {
         JLabel promptLabel = new JLabel("How many numbers to display?");
         inputField = new JTextField(5);
         setUpInputField();
-        enterButton = createButton("Enter", new Color(173, 216, 230));
+        enterButton = createButton("Enter", BUTTON_ENTER_COLOR);
 
         introPanel.add(promptLabel);
         introPanel.add(inputField);
@@ -125,8 +140,8 @@ public class SortApp extends JFrame {
 
     private JPanel createSortScreen() {
         numbersPanel = new JPanel();
-        sortButton = createButton("Sort", new Color(0, 128, 0));
-        resetButton = createButton("Reset", new Color(0, 128, 0));
+        sortButton = createButton("Sort", BUTTON_SORT_COLOR);
+        resetButton = createButton("Reset", BUTTON_SORT_COLOR);
 
         JPanel rightPanel = new JPanel();
         rightPanel.setLayout(new BoxLayout(rightPanel, BoxLayout.Y_AXIS));
@@ -174,9 +189,9 @@ public class SortApp extends JFrame {
         if (!enterButton.isEnabled()) return;
 
         int count = Integer.parseInt(inputField.getText());
-        numbers = new Random().ints(count - 1, 1, 1001).toArray();
+        numbers = random.ints(count - 1, RANDOM_LOWER_BOUND, RANDOM_UPPER_BOUND).toArray();
         numbers = Arrays.copyOf(numbers, count);
-        numbers[count - 1] = new Random().nextInt(NUMBER_LIMIT) + 1;
+        numbers[count - 1] = random.nextInt(NUMBER_LIMIT) + 1;
 
         updateNumbersPanel(numbers);
 
@@ -189,13 +204,13 @@ public class SortApp extends JFrame {
     private void updateNumbersPanel(int[] numbers) {
         numbersPanel.removeAll();
         int totalNumbers = numbers.length;
-        int columnsNeeded = (totalNumbers + 9) / 10;
+        int columnsNeeded = (totalNumbers + NUM_COLUMNS_PER_ROW - 1) / NUM_COLUMNS_PER_ROW;
 
-        numbersPanel.setLayout(new GridLayout(10, columnsNeeded, 5, 5));
+        numbersPanel.setLayout(new GridLayout(NUM_ROWS, columnsNeeded, GRID_HORIZONTAL_GAP, GRID_VERTICAL_GAP));
 
-        for (int row = 0; row < 10; row++) {
+        for (int row = 0; row < NUM_ROWS; row++) {
             for (int col = 0; col < columnsNeeded; col++) {
-                int index = col * 10 + row;
+                int index = col * NUM_ROWS + row;
                 if (index < totalNumbers) {
                     JButton button = createNumberButton(numbers[index]);
                     numbersPanel.add(button);
@@ -211,8 +226,8 @@ public class SortApp extends JFrame {
 
     private JButton createNumberButton(int number) {
         JButton button = new JButton(String.valueOf(number));
-        button.setBackground(Color.BLUE);
-        button.setForeground(Color.WHITE);
+        button.setBackground(NUMBER_BUTTON_BACKGROUND_COLOR);
+        button.setForeground(NUMBER_BUTTON_TEXT_COLOR);
         button.setOpaque(true);
         button.setBorderPainted(false);
         button.addActionListener(e -> numberButtonClicked(Integer.parseInt(e.getActionCommand())));
@@ -253,7 +268,7 @@ public class SortApp extends JFrame {
 
         @Override
         protected void process(List<int[]> chunks) {
-            updateNumbersPanel(chunks.get(chunks.size() - 1));
+            updateNumbersPanel(chunks.getLast());
         }
 
         @Override
@@ -266,16 +281,16 @@ public class SortApp extends JFrame {
             if (low < high) {
                 if (isCancelled()) return;
                 int pi = partition(arr, low, high, ascending);
-                publish(arr.clone());
+                publish(Arrays.copyOf(arr, arr.length));
                 try {
-                    Thread.sleep(100);
+                    Thread.sleep(SORT_SLEEP_DURATION_MS);
                 } catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
                 }
                 quickSort(arr, low, pi - 1, ascending);
-                publish(arr.clone());
+                publish(Arrays.copyOf(arr, arr.length));
                 quickSort(arr, pi + 1, high, ascending);
-                publish(arr.clone());
+                publish(Arrays.copyOf(arr, arr.length));
             }
         }
 
